# apeiron

./: .envrc  .gitignore  Dockerfile  flake.nix  install.sh  pyproject.toml  skaffold.yaml  update.sh
apeiron/: app.py  chat_models.py  instrumentation.py  store.py
apeiron/agents/: __init__.py  base.py  operator_6o.py  operator_6o.yaml  roast.py  roast.yaml  teto.py  teto.yaml  utils.py
apeiron/chat_message_histories/: discord.py
apeiron/tools/discord/: add_reaction.py  get_channel.py  get_emoji.py  get_guild.py  get_message.py  get_user.py  list_channels.py  list_members.py  list_messages.py  search_members.py  send_message.py  utils.py
infra/apeiron/: manifest.tf
manifests/apps/apeiron/base/: kustomization.yaml  sts.yaml  svc.yaml  vpa.yaml
manifests/apps/apeiron/components/mlflow/: patch-sts.yaml
manifests/apps/apeiron/components/tls/: patch-sts.yaml
manifests/apps/apeiron/overlays/default/: install.sh  kustomization.yaml  patch-sts.yaml
manifests/apps/apeiron/overlays/development/: patch-sts.yaml
manifests/apps/apeiron/overlays/nishir/: cert.yaml  install.nu  kustomization.yaml  patch-sts.yaml
manifests/apps/apeiron/overlays/nishir-debug/: kustomization.yaml  patch-sts.yaml
manifests/apps/apeiron/overlays/tailnet/: install.sh  kustomization.yaml  patch-sts.yaml  update.sh
manifests/apps/mlflow/base/: ingress.yaml  kustomization.yaml  pvc.yaml  sts.yaml  svc.yaml  update.sh
manifests/apps/mlflow/components/tailscale/: patch-ingress.yaml  proxyclass.yaml
manifests/apps/mlflow/overlays/nishir/: kustomization.yaml  pvc.yaml
manifests/apps/mlflow/overlays/nishir-tailnet/: kustomization.yaml
manifests/clusters/nishir/base/: ns.yaml
manifests/clusters/nishir/overlays/debug/: kustomization.yaml
(+3 files in other folders)
